--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   }
 }
